--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -22,8 +22,9 @@
         <div>
           <span class="icon ico_menu">펼치기</span>
         </div>
-        <span>카테고리</span>
+        카테고리
       </div>
+      <div class="bar"></div>
 
       <ul class="header__navbar__hotDeal">
         <li>핫딜</li>
@@ -39,14 +40,14 @@
         <li>#온수매트</li>
       </ul>
       <ul class="header__navbar__login">
-        <li>
-          <span class="ico_shwgnb ico_user"></span>
+        <li class="navber__login__login">
+          <span class="icon ico_user"></span>
           로그인
         </li>
-        <li>
-          <span class="ico_shwgnb ico_products"></span>
+        <li class="navber__login__lastItem">
+          <span class="icon ico_products"></span>
           최근본 상품
-          <span class="ico_shwgnb ico_arrow"> 펼치기</span>
+          <span class="icon ico_arrow"> 펼치기</span>
         </li>
 
       </ul>
