전체적인 페이지 여백 수정과 슬라이드 적용을 위한 html수정 및 클래스 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,14 +61,21 @@
               /></a>
             </div>
             <div class="main-top-firstline-img slide">
-              <div class="arrow-btn">
+              <div class="arrow-btn arrow-btn-left">
                 <button><i class="fas fa-angle-left"></i></button>
               </div>
-              <a href="#">
-                <!--json으로 받아와야함-->
-                <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
-              </a>
-              <div class="arrow-btn">
+              <div class="main-top-slide-imgs">
+                <a class="slide-img" href="#">
+                  <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
+                </a>
+                <a class="slide-img" href="#">
+                  <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
+                </a>
+                <a class="slide-img" href="#">
+                  <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
+                </a>
+              </div>
+              <div class="arrow-btn arrow-btn-right">
                 <button><i class="fas fa-angle-right"></i></button>
               </div>
               <ul class="main-top-slide-select">
