main-top-article-secondline 수정
css 스타일 변경을 위해 main-top-article-sec-imgs 클래스 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,45 +86,45 @@
             </div>
           </div>
           <ul class="main-top-article-secondline">
-            <li class="main-top-article-img">
-              <a href="#"
-                ><img src="/img/main-top-3.jpg" alt="main-top-first-img"
+            <li class="main-top-article-sec-imgs">
+              <a class="main-top-sec-img" href="#"
+                ><img src="/img/main-top-3.jpg" alt="main-top-secondline-img"
               /></a>
               <div class="main-top-article-description">
                 <h6>지금은 신품종 전성시대</h6>
                 <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
               </div>
             </li>
-            <li class="main-top-article-img">
-              <a href="#"
-                ><img src="/img/main-top-4.jpg" alt="main-top-first-img"
+            <li class="main-top-article-sec-imgs">
+              <a class="main-top-sec-img" href="#"
+                ><img src="/img/main-top-4.jpg" alt="main-top-secondline-img"
               /></a>
               <div class="main-top-article-description">
                 <h6>지금은 신품종 전성시대</h6>
                 <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
               </div>
             </li>
-            <li class="main-top-article-img">
-              <a href="#"
-                ><img src="/img/main-top-5.jpg" alt="main-top-first-img"
+            <li class="main-top-article-sec-imgs">
+              <a class="main-top-sec-img" href="#"
+                ><img src="/img/main-top-5.jpg" alt="main-top-secondline-img"
               /></a>
               <div class="main-top-article-description">
                 <h6>지금은 신품종 전성시대</h6>
                 <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
               </div>
             </li>
-            <li class="main-top-article-img">
-              <a href="#"
-                ><img src="/img/main-top-6.jpg" alt="main-top-first-img"
+            <li class="main-top-article-sec-imgs">
+              <a class="main-top-sec-img" href="#"
+                ><img src="/img/main-top-6.jpg" alt="main-top-secondline-img"
               /></a>
               <div class="main-top-article-description">
                 <h6>지금은 신품종 전성시대</h6>
                 <p>늘 먹던 과인 대신 조금 색다르게 맛봐요!</p>
               </div>
             </li>
-            <li class="main-top-article-img">
-              <a href="#"
-                ><img src="/img/main-top-7.jpg" alt="main-top-first-img"
+            <li class="main-top-article-sec-imgs">
+              <a class="main-top-sec-img" href="#"
+                ><img src="/img/main-top-7.jpg" alt="main-top-secondline-img"
               /></a>
               <div class="main-top-article-description">
                 <h6>지금은 신품종 전성시대</h6>
