[test] fetch json file

--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -80,5 +80,6 @@
         </section>
       </div>
     </main>
+    <script type="text/javascript" src="/javascripts/slide.js"></script>
   </body>
 </html>
