[Add] data & data router, [Refactor] Dir Structure

--- a/sass/index/common.scss
+++ b/sass/index/common.scss
@@ -1,48 +1,15 @@
-@import "./root.scss";
-$oneWidth: 10%;
+@import './root.scss';
 
-.col {
-    &-1 {
-        width: $oneWidth * 1;
+@for $i from 1 through 9 {
+    .col-#{$i} {
+        width: $oneWidth * $i;
     }
-
-    &-2 {
-        width: $oneWidth * 2;
-    }
-
-    &-3 {
-        width: $oneWidth * 3;
-    }
-
-    &-4 {
-        width: $oneWidth * 4;
-    }
-
-    &-5 {
-        width: $oneWidth * 5;
-    }
-
-    &-6 {
-        width: $oneWidth * 6;
-    }
-
-    &-7 {
-        width: $oneWidth * 7;
-    }
-
-    &-8 {
-        width: $oneWidth * 8;
-    }
-
-    &-9 {
-        width: $oneWidth * 9;
-    }    
 }
 
 .max-WH {
     &-auto {
         max-width: 100%;
-        max-height: 100%; 
+        max-height: 100%;
     }
 }
 
@@ -55,7 +22,7 @@ $oneWidth: 10%;
     text-align: left;
     line-height: 14px;
     letter-spacing: -1px;
-    
+
     a {
         display: block;
         img {
