[Fix] articleTop - carousel
- 하단의 페이지네이션 점들이 안보이는 문제가 생겼음
- 또 이동하다가 페이지네이션의 범위를 넘어가는지, classList of null 문제가 생겼음
- main.js 단에서 pagination에 들어갈 html 코드를 Promise로 리턴하여 붙여준 후에 createCarousel을 호출하니 해결됨
- 코드 상당히 더러운듯.. 리팩토링 시급시급

--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -15,6 +15,10 @@ main {
   display: none;
 }
 
+.dot_active {
+  background-color: brown;
+}
+
 .main__article {
   width: 100%;
   background-color: #fff;
