[STYLE]Styling main_section

--- a/shopping/public/stylesheets/sass/style.sass
+++ b/shopping/public/stylesheets/sass/style.sass
@@ -1,5 +1,12 @@
 @import components/componet.sass
 @import header/header.sass
+@import main/main.sass
 
 body
     height: 500vh
+    background-color: #f3f3f3
+    font-family: 돋움,dotum,sans-serif
+
+section
+    width: 100%
+    padding-top: 19px
