--- a/shopping/public/stylesheets/components/componet.css
+++ b/shopping/public/stylesheets/components/componet.css
@@ -13,3 +13,28 @@
   height: 18px;
   margin-top: 18px;
   background-color: #e3e3e3; }
+
+.shoppinglists {
+  float: bottom;
+  display: flex; }
+
+.shoppinglist {
+  width: 200px;
+  height: 276px;
+  padding: 21px;
+  border-bottom: 0 none;
+  border: 0.5px solid rgba(0, 0, 0, 0.05); }
+  .shoppinglist img {
+    width: 200px;
+    aspect-ratio: auto 200 / 200;
+    height: 200px; }
+  .shoppinglist strong {
+    display: block;
+    overflow: hidden;
+    margin: 10px 1px;
+    font-size: 14px;
+    white-space: nowrap; }
+  .shoppinglist span {
+    display: block;
+    color: #888;
+    font-size: 12px; }
