--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -78,17 +78,17 @@ main {
   border-left: 1px solid #f1f1f1;
   margin-right: 2px;
   text-align: center;
-  .slide-list {
+  .slide-list__wrapper {
     position: relative;
     max-width: 485px;
     margin: 0 147px;
     overflow: hidden;
   }
-  .slide-item__wrapper {
+  .slide-list {
     position: relative;
     left: -515px;
     display: flex;
-    transition: all, 0.3s;
+    // transition: all 0.3s;
     z-index: 99;
     .slide-item {
       float: left;
@@ -119,7 +119,7 @@ main {
       & > div:hover {
         color: rgba(0, 0, 0, 0.6);
       }
-      & > div:focus {
+      & > div:active {
         border: 2px solid #000;
         border-radius: 5px;
       }
