더보기 버튼을 위한 html 태그 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,44 +13,7 @@
   </head>
   <body>
     <header class="header"><% include ./parts/header %></header>
-    <section class="under-nav-wrapper">
-      <div class="under-nav-container">
-        <div class="under-nav-category under-nav-list">
-          <button>
-            <i class="fas fa-bars"></i>
-          </button>
-          <span>카테고리</span>
-        </div>
-        <div class="under-nav-list-item">
-          <ul class="under-nav-list">
-            <li>핫딜</li>
-            <li>베스트100</li>
-            <li>할인특가</li>
-            <li>기획전</li>
-          </ul>
-          <ul class="under-nav-list tag">
-            <li>#건강식품</li>
-            <li>#제철음식</li>
-            <li>#블루투스이어폰</li>
-            <li>#커플체어</li>
-            <li>#노트북</li>
-          </ul>
-        </div>
-        <div class="under-nav-list">
-          <div class="under-nav-right-item profile">
-            <button><i class="far fa-user"></i></button>
-            <span>로그인</span>
-          </div>
-          <div class="under-nav-right-item product">
-            <button><i class="far fa-clone"></i></button>
-            <span>장바구니</span>
-          </div>
-          <div class="down-arrow">
-            <i class="fas fa-angle-down"></i>
-          </div>
-        </div>
-      </div>
-    </section>
+    <section class="under-nav-wrapper"><% include ./parts/underNav %></section>
     <main class="main">
       <section class="main-top-section">
         <article class="main-top-article">
@@ -132,6 +95,17 @@
               </div>
             </li>
           </ul>
+          <div class="main-top-article-btn-container">
+            <div class="show-btn">
+              <button>
+                <span
+                  >더보기
+                  <span></span>
+                  <span><i class="fas fa-angle-down"></i></span>
+                </span>
+              </button>
+            </div>
+          </div>
         </article>
       </section>
     </main>
