Add Data Control files 1) 더보기 버튼 데이터 관련하여 fetch API를 활용하여 작업중에 있습니다.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -191,7 +191,7 @@
                         </ul>                        
                     </div>
 
-                    <button type="button" class="content__more__btn">
+                    <button type="button" class="content__more__btn" value="1">
                         더보기(1/276건)
                         <!-- 이버튼 누르면, ul(more) 안에서 아이템 ++  -->
                     </button>
@@ -263,4 +263,5 @@
             </div>
         </div>
     </body>
+    <script type="module" src= "./javascripts/index.js"></script>
 </html>
