메인 테마 카테고리 화살표 버튼 추가
main-theme-category-container 안에 화살표 div 추가하였다

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,6 +160,12 @@
               </div>
             </li>
           </ul>
+          <div class="main-theme-arrow-btn left-arrow">
+            <button><i class="fas fa-angle-left"></i></button>
+          </div>
+          <div class="main-theme-arrow-btn right-arrow">
+            <button><i class="fas fa-angle-right"></i></button>
+          </div>
         </article>
       </section>
     </main>
