[Update] Response of json-data in main.js
- 콘텐츠별로 다른 url로 통신하는 방식으로 바꿈
- 더보기 버튼 추가
    - 누르면 5개씩 추가로 보여짐
- 좀 더 구현하다가 리팩토링 해야겠음..

--- a/shopping/public/stylesheets/main/articleTop.scss
+++ b/shopping/public/stylesheets/main/articleTop.scss
@@ -158,3 +158,10 @@
     }
   }
 }
+
+#mallEventList_more {
+  width: 100%;
+  background-color: map-get($color-palette, navbar-line-color);
+  text-align: center;
+  padding: 2em 0;
+}
