--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
       defer
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
     ></script>
+    <script src="/js/main.js" defer></script>
     <title>FE-3-shoppingHow</title>
   </head>
   <body>
