--- a/views/index_middle.scss
+++ b/views/index_middle.scss
@@ -34,7 +34,7 @@
 
 .top_imglist {
     width: 1282px;
-    
+
     a {
         position:relative;
         color:black;
@@ -89,4 +89,132 @@
         background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/img/ico_comm2_150514.gif) no-repeat;
         background-position: 0 -850px;
     }
+}
+
+#middle_mid {
+    margin-top: 50px;
+}
+
+.middle_head {
+    text-align: left;
+    margin-bottom: 11px;
+    
+    h3 {
+        margin:0;
+    }
+}
+
+.middle_img {
+    list-style-type: none;
+    display: flex;
+    background-color: white;
+    border: 1px solid #cdcdcd;
+    padding:0;
+    margin:0;
+    &:last-child {
+        border-top: none;
+    }
+
+    li {
+        position:relative;
+        padding: 25px 27px 20px;
+        border-right: 1px solid #cdcdcd;
+        &:last-child {
+            border: none;
+        }
+
+        .hot_deal_text {
+            display: block;
+            text-align: left;
+            font-size: 12px;
+            letter-spacing: -1px;
+            margin-top: 11px;
+            height: 40px;
+        }
+
+        .hot_deal_won {
+            font-weight: 700;
+            font-size: 14px;
+        }
+
+        .hot_deal_discount {
+            color:#fc363c;
+            font-size: 24px;
+            padding-right: 5px;
+        }
+
+        .original_price {
+            display: block;
+            margin-top: -9px;
+            color: gray;
+            font-size: 13px;
+            text-align: left;
+            text-decoration: line-through;
+        }
+
+        .span_box {
+            display: flex;
+            justify-content: space-between;
+            height: 43px;
+        }
+    }
+
+    img {
+        width:200px;
+        height:200px;
+    }
+}
+
+.up_keyword {
+    list-style-type: none;
+    display: flex;
+    background-color: white;
+    border: 1px solid #cdcdcd;
+    padding:0;
+    margin:0;
+    &:last-child {
+        border-top: none;
+    }
+
+    li {
+        position:relative;
+        padding: 25px 27px 20px;
+        border-right: 1px solid #cdcdcd;
+        &:last-child {
+            border: none;
+        }
+
+        .img-title {
+            padding-bottom: 15px;
+        }
+
+        a {
+            display: block;
+            color:black;
+            width: 200px;
+            font-size: 14px;
+            text-align: left;
+            text-decoration: none;
+
+            strong {
+                display: block;
+                font-size: 12px;
+                font-weight: 400;
+                height: 30px;
+                margin: 5px 0 12px;
+                letter-spacing: -1px;
+            }
+
+            span {
+                font-weight: 700;
+                font-size: 12px;
+            }
+        }
+    }
+
+    img {
+        width:200px;
+        height:200px;
+    }
+
 }
