--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,50 +1,187 @@
 
-header {
-    // width: 100%;
-    // background-color: pink;
-    .main__head{
-        margin:100px 100px;
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    outline: none;    
+}
 
-        // display: grid;
-        // grid-template-columns: auto;
-        display: flex;
-        flex-flow: row nowrap;
-        // flex-direction: row;
-        // justify-content: center;
-    }
-   
-    .main__logo__box {
+body{
+    font-size: 14px;
+    line-height: 1.5;
+    font-family: Malgun Gothic,맑은 고딕,sans-serif;
+    color: #333;
+}
+// .divideLine {
+//     all: unset;
+//     border-left: 1px solid #c9c8c8;
+//     flex: 0 0 0px;
+//     height: 32px;
+//     align-self: center;
+// }
+
+
+
+%pure-btn {
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 0;
+}
+
+input {
+    all:unset;
+}
+
+
+
+.head{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    margin:20px 0 40px 40px;
+
+    &__logo__box{
         display: inline;
         img{
             width: 120px;
         }
+    }
 
-    } 
+    &__search__box {
 
-    .main__search__box {
-        $search_borderColor: #cecfd1;
-
+        $line_borderColor: #e0e0e0;
         position:relative;
         width: 670px;
-        height: 51px;
-        box-sizing: border-box;
-
+        height: 50px;
+        border: 1px solid $line_borderColor;
+        border-radius: 10px;
         margin: 0 30px;
-        padding:3px 10px;
-
+        padding:15px 40px 9px 14px;
+    
         input {
             width: 100%;
             height: 100%;
-            border-radius: 10px;
-            border: 2px solid $search_borderColor;
             font-size: 20px;
+            display: block;
+            width: 100%;
+            height: 18px;
+            border: 0;
+            font-weight: 600;
+            font-size: 17px;
+            line-height: 20px;
+            letter-spacing: +.03em;
+            color: #1f1f1f;
+            outline: 0;
         }
         button {
+            @extend %pure-btn;
             position: absolute;
-            right:0;
+            right:13px;
+            top:11px;
+        }
+    }
+}
+
+
+.nav {
+
+    $search_borderColor: #e0e0e0;
+    $text_darkColor :#333;
+    display: flex;
+    $menu_font_size:16px;
+    position: relative;
+    height: 55px;
+    border-top: 1px solid #dcdfe4;
+    border-bottom: 1px solid #dcdfe4;
+    margin: 10px 20px 20px 10px;
+    font-size: 16px;
+
+
+    &__wrapper {
+        display: flex;
+        height: 45px;
+        justify-content: flex-start;
+
+        .divideLine{
+            width: 1px;
+            height: 18px;
+            margin-top: 18px;
+            background-color: #e3e3e3;
         }
     }
 
-    
-}
+    &__category_box{
+        padding: 5px 20px;
+        width: 160px;
+        button {
+            @extend %pure-btn;
+            display:grid;
+            align-items: center;
+            grid-gap:7px;
+            grid-template-columns: auto auto;
+            margin:5px 0;
+            font-size: $menu_font_size;
+            color: #333;
+            letter-spacing: -.03em;
+        }
+    }
 
+    &__menu__box {
+        width: 400px;
+        ul{
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            grid-gap:20px;
+            align-items : center;
+            list-style-type: none;
+            margin:15px;
+            text-align: center;
+            
+            li a {
+                color:$text_darkColor;
+                text-decoration:none;
+                font-weight: 600;
+
+            }
+        }
+    }
+
+    &__hashtag__box {
+        width: 500px;
+        ul{
+            display: grid;
+            grid-template-columns: auto auto auto auto auto;
+            grid-gap:20px;
+            align-items : center;
+            list-style-type: none;
+            margin:15px;
+            text-align: center;
+            
+            li a {
+                color:rgb(180, 180, 180);
+                text-decoration:none;
+                font-weight: 600;
+            }
+        }
+    }
+
+    &__mypage__box {
+        width:14%;
+        ul{
+            display: grid;
+            grid-template-columns: auto auto auto auto auto;
+            grid-gap:20px;
+            align-items : center;
+            list-style-type: none;
+            margin:15px;
+            text-align: center;
+            
+            li a {
+                color:rgb(180, 180, 180);
+                text-decoration:none;
+                font-weight: 600;
+            }
+        }
+    }
+}
